Bug fix for scrollbar (hide on 100%, scroll to the end)

--- a/src/Clients/CustomVisuals/visuals/hierarchySlicer/visual/styles/hierarchySlicer.less
+++ b/src/Clients/CustomVisuals/visuals/hierarchySlicer/visual/styles/hierarchySlicer.less
@@ -75,5 +75,7 @@
 }
 
 .slicerContainer .slicerItemContainer {
-    justify-content: flex-start;
+    justify-content: flex-start !important;
 }
+
+.scroll-element,[hidden],template{display:none}
